# SDGsApp

./: README.md  requirements.txt
backend/: .gitignore  LDAModels.pkl  add_test_data.py  pyproject.toml  requirements.txt  server.py
backend/src/: app.py  main.py  utils.py
backend/src/config/: db.py  models.py
backend/src/models/: analysis_models.py  corpus_models.py  object.py  sdg_mapping_models.py  sdg_reference_models.py
backend/src/routes/: __init__.py  analysis_routes.py  corpus_routes.py  graph_routes.py  sdg_mapping_routes.py  sdg_reference_routes.py  users_routes.py
backend/src/services/: LDAModels50.pkl  model_handler.py
clerk-react/: package-lock.json  package.json
clerk-react/src/: App.jsx
clerk-react/src/components/: AnalisisContent.jsx  DashboardContent.jsx  ProfileContent.jsx  UploadContent.jsx
clerk-react/src/pages/: Dashboard copy.jsx  Dashboard.jsx  Home.jsx  Login.jsx  MainDashboard.jsx  Register.jsx
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/auth/: AuthenticationPage.jsx
frontend/src/components/: AnalisisContent.jsx  DashboardContent.jsx  DocumentContent.jsx  GraphContent.jsx  InstitutionPieChart.jsx  KeamananContent.jsx  KnowledgeGraph.jsx  ProfileContent.jsx  SDGBarChart.jsx  UploadContent.jsx
frontend/src/pages/: (GakKepake)Login.jsx  (GakKepake)MainProfile.jsx  (GakPake)Register.jsx  Home.jsx  MainDashboard.jsx  NotFound.jsx
